# codepipline-orchestra

./: .gitignore  README.rst
app-pipeline-boilerplate/: README.rst  cookiecutter.json
app-pipeline-boilerplate/{{cookiecutter.repository_name|lower}}/: .dockerignore  Dockerfile  README.rst  docker-compose.yaml  entrypoint.sh
app-pipeline-boilerplate/{{cookiecutter.repository_name|lower}}/.github/: dependabot.yml
app-pipeline-boilerplate/{{cookiecutter.repository_name|lower}}/cicd/: buildspec.yml  ecr_repository.yml  release_pipeline.yml
app-pipeline-boilerplate/{{cookiecutter.repository_name|lower}}/envs/: nonprod.yml  prod.yml
app-pipeline-boilerplate/{{cookiecutter.repository_name|lower}}/logging/: filters.conf  spring_parser.conf
aws_accounts_setup/: README.rst  playbook-cicd-01.yaml
aws_accounts_setup/templates/: cicd_iam_roles.template  cicd_kms_key.template  cicd_mgmt_settings.template  cicd_s3_buckets.template
function-invoke-wrapper/: .editorconfig  Makefile  README.rst  codepipeline_function.template  pyproject.toml
function-invoke-wrapper/codepipeline_wrapper/: __init__.py  function.py
